--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>pgTune - Tune up your PostgreSQL</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="elm.js"></script>
 </head>
 <body>
-	<div id="elm"></div>
+	<main>
+		<div id="elm"></div>
+	</main>
 	<script>
 	var app = Elm.Main.init({
 	  node: document.getElementById('elm')
