Add display for curl command

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 		<div id="elm"></div>
 	</main>
 	<script>
-	var app = Elm.Main.init({
-	  node: document.getElementById('elm')
-	});
+		// Initialize your Elm program
+		var app = Elm.Main.init({
+			node: document.getElementById('elm')
+		});
 	</script>
 </body>
 </html>
